Fix transparency pattern z-index issue
Pass HSVAColor object to onSwatchSelect

--- a/src/scss/pickr.scss
+++ b/src/scss/pickr.scss
@@ -79,13 +79,25 @@
         width: 1.5em;
         height: 1.5em;
         border-radius: 0.15em;
-        border: 1px solid rgba(black, 0.05);
-        transition: all 0.3s;
         cursor: pointer;
         margin: 0 2px 2px 0;
         flex-shrink: 0;
         justify-self: center;
+        transition: all 0.3s;
+        overflow: hidden;
         @include transparency-background(6px);
+
+        &::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: currentColor;
+            border: 1px solid rgba(black, 0.05);
+            border-radius: 0.15em;
+        }
 
         &:hover {
             filter: brightness(1.1);
